--- a/html/workExp.html
+++ b/html/workExp.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Corey Patrick</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script defer src="js/index.js"></script>
+    <script defer src="../js/pages.js"></script>
   </head>
 </html>
 
@@ -14,9 +14,9 @@
   <div id="navHolder"></div>
   <div id="headerHolder"></div>
   <main>
-    <div class="section home">
-      <h1 class="heading">Welcome!</h1>
+    <div class="section workExp">
+      <h1 class="heading">Work Experience</h1>
     </div>
+    <div id="footerHolder"></div>
   </main>
-  <div id="footerHolder"></div>
 </body>
