finished formatting all pages. Need to add text now

--- a/html/projects.html
+++ b/html/projects.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Corey Patrick</title>
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/projectStyle.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script defer src="../js/pages.js"></script>
   </head>
@@ -14,8 +15,19 @@
   <div id="navHolder"></div>
   <div id="headerHolder"></div>
   <main>
-    <div class="section projects">
+    <div class="section">
       <h1 class="heading">Previous Projects</h1>
+      <div class="projects">
+        <div class="projectDescr">
+          <p>comparIO</p>
+        </div>
+        <div class="projectDescr">
+          <p>Unity Platformer</p>
+        </div>
+        <div class="projectDescr">
+          <p>something</p>
+        </div>
+      </div>
     </div>
     <div id="footerHolder"></div>
   </main>
