--- a/html/workExp.html
+++ b/html/workExp.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Corey Patrick</title>
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/workExp.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script defer src="../js/pages.js"></script>
   </head>
@@ -14,9 +15,67 @@
   <div id="navHolder"></div>
   <div id="headerHolder"></div>
   <main>
-    <div class="section workExp">
-      <h1 class="heading">Work Experience</h1>
+    <div class="section">
+      <h1 class="heading">Experience</h1>
+      <div class="workExp">
+        <div class="listHolder">
+          <h3 class="expHeader">Education</h3>
+          <ul class="noStyle list">
+            <li class="schoolItem">
+              <p class="listText">MS Computer Science</p>
+              <p class="listText">Portland State University</p>
+              <p class="listText">Portland, OR</p>
+            </li>
+            <li class="schoolItem">
+              <p class="listText">BS Physics</p>
+              <p class="listText">Central Washington University</p>
+              <p class="listText">Ellensburg, WA</p>
+            </li>
+            <li class="schoolItem">
+              <p class="listText">Astronomy Minor</p>
+              <p class="listText">Central Washington University</p>
+              <p class="listText">Ellensburg, WA</p>
+            </li>
+            <li class="schoolItem">
+              <p class="listText">Mathematics Minor</p>
+              <p class="listText">Central Washington University</p>
+              <p class="listText">Ellensburg, WA</p>
+            </li>
+          </ul>
+        </div>
+        <div class="listHolder">
+          <h3 class="expHeader">Courses</h3>
+          <ul class="courses list">
+            <li class="listItem">Intro to Web Development</li>
+            <li class="listItem">Software Engineering</li>
+            <li class="listItem">Operating System Foundations</li>
+            <li class="listItem">Programming Systems</li>
+            <li class="listItem">Computer Systems Programming</li>
+            <li class="listItem">Algorithms & Complexity</li>
+            <li class="listItem">Algorithm Design/Analysis</li>
+            <li class="listItem">Discrete Structures I/II</li>
+            <li class="listItem">Calculus I-IV</li>
+            <li class="listItem">Differential Equations I/II</li>
+            <li class="listItem">Computational Physics</li>
+          </ul>
+        </div>
+        <div class="listHolder">
+          <h3 class="expHeader">Work Experience</h3>
+          <ul class="noStyle list">
+            <li>
+              <p class="listText">Intel Corporation</p>
+              <p class="listText">Software Dev</p>
+              <p class="listText">Experience:</p>
+              <ul>
+                <li class="listItem">Maintaining 5 live applications</li>
+                <li class="listItem">Maintaining web page</li>
+                <li class="listItem">WPF(C#) Development</li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
-    <div id="footerHolder"></div>
   </main>
+  <div id="footerHolder"></div>
 </body>
