--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
   <main>
     <div class="section home">
       <h1 class="heading">Welcome!</h1>
+      <p>
+        Thank you for visiting my page! Each navigation link will lead you to
+        different information about me.
+      </p>
     </div>
   </main>
   <div id="footerHolder"></div>
