--- a/html/about.html
+++ b/html/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Corey Patrick</title>
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/aboutStyle.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script defer src="../js/pages.js"></script>
   </head>
@@ -16,6 +17,12 @@
   <main>
     <div class="section about">
       <h1 class="heading">About Me</h1>
+      <img
+        class="headshot"
+        src="../images/CoreyPatrick.jpg"
+        alt="Picture of Corey Patrick"
+      />
+      <p class="aboutText">This is some test text.</p>
     </div>
     <div id="footerHolder"></div>
   </main>
