Added two projects and links to the repos

--- a/html/projects.html
+++ b/html/projects.html
@@ -19,13 +19,40 @@
       <h1 class="heading">Previous Projects</h1>
       <div class="projects">
         <div class="projectDescr">
-          <p>comparIO</p>
+          <p class="name">compareIO</p>
+          <p class="text">Language: Python</p>
+          <p>
+            This project was for a graduate software engineering course to
+            practice software engineering principles. The program is a python
+            app that uses a GUI to allow a user to input a game then it accesses
+            two website API's, Steam and GOG, figures out which site the game is
+            cheaper on, let's the user know and displays a link to the webpage
+            for the game. The GUI uses the PySimpleGUI library and isn't too
+            involved. I wanted to do this project to better understand how to
+            access an API and manipulate it's data, as well as create an
+            application with something other than WPF.
+          </p>
+          <a href="https://github.com/CoreyPatrickPDX/compareIO"
+            >Link to Code</a
+          >
         </div>
         <div class="projectDescr">
-          <p>Unity Platformer</p>
-        </div>
-        <div class="projectDescr">
-          <p>something</p>
+          <p class="name">Unity Platformer</p>
+          <p>Language: C# (Unity Framework)</p>
+          <p>
+            I created a 2D platformer in the Unity Framework Engine to
+            understand game development a little bit better. It only consists of
+            two levels, each with separate level designs, skyboxes, and music.
+            It also has a main menu and a pause menu. The player is able to
+            traverse levels with hazards, one-way and two-way platforms, as well
+            as some moving platforms. The goal is to reach the flag at the end
+            of the level while collecting coins along their path and from
+            blocks. The player is able to move on the x-axis as well as jump
+            along the y-axis. There is also gravity implemented so the player
+            arcs through the air if moving while jumping. The player can also
+            wall-jump and slowly slide down walls as if there were friction.
+          </p>
+          <a href="https://github.com/CoPatri/2DPlatformer">Link to Code</a>
         </div>
       </div>
     </div>
