Flushed out my about page, fixed acessibility issues, added js for the contact form to show input values in the console since there is no functionality to submit to a server.

--- a/html/about.html
+++ b/html/about.html
@@ -22,7 +22,22 @@
         src="../images/CoreyPatrick.jpg"
         alt="Picture of Corey Patrick"
       />
-      <p class="aboutText">This is some test text.</p>
+      <p class="aboutText">
+        Hi! My name is Corey Patrick and I'm currently a graduate computer
+        science student at Portland State University. As well as going to
+        school, I work full time as a software engineer for Intel. Before
+        working in my current position I still worked for Intel as a Low Yield
+        Analysis manufacturing technician. I had a Bachelors of Science in
+        Physics which helped me a lot in that role but I found that I enjoyed
+        writing code and problem solving problems with code better suited me.
+        For work I mostly code in C# for WPF applications as well as some html
+        for web development. I've learned quite a bit more in school covering
+        topics in C++, C, Python, JavaScript, and more developing solutions for
+        problems my professors come up with. I'm hoping to focus on full stack
+        development for both web and non-web apps to continue excelling at work,
+        as well as going over machine learning and artificial intelligence
+        topics when I can.
+      </p>
     </div>
     <div id="footerHolder"></div>
   </main>
