--- a/html/contact.html
+++ b/html/contact.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/contactStyle.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script defer src="../js/pages.js"></script>
+    <script defer src="../js/contact.js"></script>
   </head>
 </html>
 
@@ -19,7 +20,7 @@
       <p>If you would like to contact me, please fill out the form below!</p>
       <form class="form" action="">
         <section>
-          <h1 id="formName">Contact Me</h1>
+          <h2 id="formName">Contact Corey Patrick</h2>
           <div class="form-element">
             <label class="title" for="name">Name:</label>
             <input class="user-input" type="text" name="name" id="name" />
